--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@maskito/core": "^2.0.0",
+    "@maskito/kit": "^2.0.0",
+    "@maskito/phone": "^2.0.0",
+    "@maskito/react": "^2.0.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "core-js": "^3.35.1",
+    "libphonenumber-js": "^1.10.54",
     "moment": "^2.30.1",
     "next": "14.1.0",
     "react": "^18",
